<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_original_title_tv"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/colorMovieTitle"
            android:gravity="center"
            android:text="@string/movie_text"
            android:textColor="@color/cardview_light_background"
            android:textSize="30sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="224dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movie_poster_image_thumbnail_iv"
                android:layout_width="182dp"
                android:layout_height="200dp"
                android:layout_marginTop="1dp"
                android:background="#7c519f"
                android:contentDescription="@string/content_description"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <com.github.ivbaranov.mfb.MaterialFavoriteButton
                    android:id="@+id/favorite_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/movie_vote_average_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vote_average_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_release_date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/movie_overview_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center"
            android:text="@string/overview_text"
            android:textSize="18sp"
            android:textStyle="italic"
            android:visibility="visible" />

        <Space
            android:layout_width="1dp"
            android:layout_height="30dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <Button
            android:id="@+id/reviews_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reviews_text"
            android:textColor="@color/colorDeepPurple"
            android:textSize="22sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/trailers_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trailers_text"
            android:textColor="@color/colorTeal"
            android:textSize="22sp"
            android:textStyle="italic" />

    </LinearLayout>
</ScrollView>





